:sparkle::truck: added detail page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,7 @@
     <% data.map((art) => { %>
 
         <article>
-            <a href="">  
+            <a href="art/<%= art.objectNumber %>">  
                 <h2><%= art.title %></h2>
                 <h3><%= art.principalOrFirstMaker %></h3>
                 <figure>
