--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,13 @@
         </main>
+        <script>
+            if("serviceWorker" in navigator) {
+                window.addEventListener("load", () =>{
+                    navigator.serviceWorker.register("/serviceWorker.js")
+                        .then((registration) => {
+                            return registration.update();
+                        })
+                })
+            }
+        </script>
     </body>
 </html>
