--- a/views/offline.ejs
+++ b/views/offline.ejs
@@ -1,6 +1,8 @@
-<%- include('partials/head'); %> 
-<%- include('partials/header'); %> 
+<%- include('partials/head'); %> <%- include('partials/header'); %>
 
-<h1>Je bent offline</h1>
+<h1>
+  There's a ton of good art out there offline among a ton of trash, and the same
+  goes with what's online.
+</h1>
 
 <%- include('partials/footer'); %>
